--- a/KDLAF2021_test02/index.html
+++ b/KDLAF2021_test02/index.html
@@ -6,7 +6,7 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="p5js-temp-KDLAF2021_test023868909026901852643.js"></script>
+  <script language="javascript" type="text/javascript" src="KDLAF2021_test02.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
