--- a/test_phoneOrPC/index.html
+++ b/test_phoneOrPC/index.html
@@ -5,8 +5,13 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="test_phoneOrPC_phone.js"></script>
-  <script language="javascript" type="text/javascript" src="test_phoneOrPC.js"></script>
+  <script language="javascript" type="text/javascript">
+  if(/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
+    src="test_phoneOrPC_phone.js";
+  } else{
+    src="test_phoneOrPC.js";
+  }
+</script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
