--- a/KDLAF2021_test05/index.html
+++ b/KDLAF2021_test05/index.html
@@ -9,7 +9,7 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.sound.min.js"></script>
   <script language="javascript" type="text/javascript" src="PC.js"></script>
   <script language="javascript" type="text/javascript" src="Phone.js"></script>
-  <script language="javascript" type="text/javascript" src="p5js-temp-KDLAF2021_test054111254804602342324.js"></script>
+  <script language="javascript" type="text/javascript" src="KDLAF2021_test05.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
