--- a/metro_220220_demo01/index.html
+++ b/metro_220220_demo01/index.html
@@ -29,7 +29,7 @@
   <script language="javascript" type="text/javascript" src="WaterDrop.js"></script>
   <script language="javascript" type="text/javascript" src="info.js"></script>
   <script language="javascript" type="text/javascript" src="winFrame.js"></script>
-  <script language="javascript" type="text/javascript" src="p5js-temp-metro_220220_demo014064456770790898490.js"></script>
+  <script language="javascript" type="text/javascript" src="metro_220220_demo01.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
