--- a/bridgeTreadmill_220510_test04/index.html
+++ b/bridgeTreadmill_220510_test04/index.html
@@ -54,6 +54,6 @@ margin:
 
   </head>
 
-  <body style="overflow:hidden" onselectstart="return false" onpaste="return false" oncopy="return false" oncut="return false">
+  <body>
   </body>
   </html>
