--- a/bridgeTreadmill_220510_test04/index.html
+++ b/bridgeTreadmill_220510_test04/index.html
@@ -5,7 +5,7 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="p5js-temp-Belt8312544607958609486.js"></script>
+  <script language="javascript" type="text/javascript" src="Belt.js"></script>
   <script language="javascript" type="text/javascript" src="Mess.js"></script>
   <script language="javascript" type="text/javascript" src="bridgeTreadmill_220510_test04.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
