--- a/metro_demo/forDraw/metro_220618_test03_forDraw_04/index.html
+++ b/metro_demo/forDraw/metro_220618_test03_forDraw_04/index.html
@@ -41,7 +41,7 @@
   <script language="javascript" type="text/javascript" src="info.js"></script>
   <script language="javascript" type="text/javascript" src="io.js"></script>
   <script language="javascript" type="text/javascript" src="winFrame.js"></script>
-  <script language="javascript" type="text/javascript" src="metro_220618_test03_forDraw.js"></script>
+  <script language="javascript" type="text/javascript" src="metro_220618_test03_forDraw_04.js.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
