--- a/BlockTrain/metro_220902_test05/index.html
+++ b/BlockTrain/metro_220902_test05/index.html
@@ -11,6 +11,7 @@
   <script language="javascript" type="text/javascript" src="Block.js"></script>
   <script language="javascript" type="text/javascript" src="BlockMiniVer.js"></script>
   <script language="javascript" type="text/javascript" src="Bridge.js"></script>
+  <script language="javascript" type="text/javascript" src="Card.js"></script>
   <script language="javascript" type="text/javascript" src="FOG.js"></script>
   <script language="javascript" type="text/javascript" src="FS.js"></script>
   <script language="javascript" type="text/javascript" src="Firework.js"></script>
@@ -45,6 +46,7 @@
   <script language="javascript" type="text/javascript" src="WaterDrop.js"></script>
   <script language="javascript" type="text/javascript" src="info.js"></script>
   <script language="javascript" type="text/javascript" src="io.js"></script>
+  <script language="javascript" type="text/javascript" src="loading.js"></script>
   <script language="javascript" type="text/javascript" src="winFrame.js"></script>
   <script language="javascript" type="text/javascript" src="metro_220902_test05.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
