--- a/straightMaze/straightMaze_221009_upload_a/index.html
+++ b/straightMaze/straightMaze_221009_upload_a/index.html
@@ -8,8 +8,8 @@
   <script language="javascript" type="text/javascript" src="Corridor.js"></script>
   <script language="javascript" type="text/javascript" src="FS.js"></script>
   <script language="javascript" type="text/javascript" src="info.js"></script>
-  <script language="javascript" type="text/javascript" src="p5js-temp-io8533746496464227656.js"></script>
-  <script language="javascript" type="text/javascript" src="p5js-temp-straightMaze_221009_upload_a1429622386607774777.js"></script>
+  <script language="javascript" type="text/javascript" src="io.js"></script>
+  <script language="javascript" type="text/javascript" src="straightMaze_221009_upload_a.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
