--- a/straightMaze/straightMaze_221009_upload_b/index.html
+++ b/straightMaze/straightMaze_221009_upload_b/index.html
@@ -8,8 +8,8 @@
   <script language="javascript" type="text/javascript" src="Corridor.js"></script>
   <script language="javascript" type="text/javascript" src="FS.js"></script>
   <script language="javascript" type="text/javascript" src="info.js"></script>
-  <script language="javascript" type="text/javascript" src="p5js-temp-io818205378520012962.js"></script>
-  <script language="javascript" type="text/javascript" src="p5js-temp-straightMaze_221009_upload_b5782907904472289422.js"></script>
+  <script language="javascript" type="text/javascript" src="io.js"></script>
+  <script language="javascript" type="text/javascript" src="straightMaze_221009_upload_b.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
